# techsolutions-blog-api

./: .travis.yml  Dockerfile  README.md  docker-compose.yml  fly.toml  heroku.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  fly-deploy.yml
techsolutions_blog/: asgi.py  settings.py  urls.py  wsgi.py
techsolutions_blog/base/: admin.py  apps.py  models.py  serializers.py  test.py  views.py
techsolutions_blog/base/migrations/: 0001_initial.py  0002_remove_postagem_artigo_do_autor.py  0003_comentarios.py  0004_rename_comentarios_comentario.py
techsolutions_blog/base/serializers/: comentario.py  postagem.py
