[tool.poetry]
name = "techsolutions-blog-api"
version = "0.1.0"
description = "API para o blog da TechSolutions"
authors = ["JuniorD-Isael"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "techsolutions_blog_api" }
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = [
    "E",
    "F",
    "W",
]
ignore = [
    "E203",
    "E501",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["E501"]